# chemDM

./: PropertyReconstruction.ipynb  PropertyReconstruction_carlos_implementation.ipynb  README.md  SMILES2Molecule.ipynb  TrainingVAE.ipynb  TrainingVAE_Carlos_implementation.ipynb  ValidationVAE.ipynb  ValidationVAE_similarityTests.ipynb  auxiliary_functions.py  chemestry_perceptron.py  chemistry_perceptron_carlos_implementation.py  chemistry_vae_selfies.py  chemistry_vae_selfies_carlos.py  chemistry_vae_selfies_carlos_RNN.py  chemistry_vae_symmetric.py  environment.yml  pyproject.toml  settings.yml  settings_RNN.yml  settings_perceptron.yml  settings_perceptron_carlos_implementation.yml  tut1-model.pt  xyzFileReader.ipynb
Clustering/: Main.ipynb  clustering.py  clustering_functions.py  clustering_settings.yml  run_script.sh
Models/: Main.ipynb  bf.py  bf_settings.yml  function_fingerprints.py  functions.py  functions_sub.py  mlp copy.py  mlp.py  mlpB_settings.yml  mlp_B.py  mlp_settings.yml  vae.py  vae_settings.yml
binary_tests/: binary_loader.ipynb  binary_loader.py
brute_force/: CSD_EES_DB_energies.csv  TrainingVAE.ipynb  ValidationVAE_rnn.ipynb  chemistry_vae_symmetric_rnn.py  selfies_rnn.yml
chemdm/: __init__.py
chemistry_vae_rnn_symmetric/: chemistry_vae_symmetric_rnn.py  selfies_rnn.yml
extrapolation/: extrapolation.ipynb
functions/: README_TODO  auxiliary_functions.py
mlp/: perceptron.yml  properties_searcher_2.py
model/: functions.py  mlp_settings.yml  property_prediction_MLP.py  readme.md  vae.py  vae_settings.yml
model evaluation/: readme.md
(+124 files in other folders)
