[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chemdm"
version = "0.1.0"
description = "code for analyzing chemical properties in the context of searches for dark matter"
authors = [
    {name = "Carlos Blanco", email = "carlosblanco2718@gmail.com"},
    {name = "Juri Smirnov", email = "Juri.Smirnov@liverpool.ac.uk"},
    {name = "Cameron Cook", email = "sgccook2@liverpool.ac.uk"}]
license = {text="LICENSE.txt"}

[tool.dependencies]
python = "^3.10"
numpy = "^1.24"
scipy = "^1.11"
pandas = "^2.1"
pyyaml = "^6.0"
pytorch = "^2.1"
scikit-learn = "^1.3"
matplotlib = "^3.8"
pysmiles = "^1.1"
selfies = "^2.1"
deepchem = "^2.5"
rdkit = "^2023.9"
levenshtein = "^0.23"


[tool.dev-dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[tool.setuptools.packages.find]
namespaces = false